[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ogbenchTL"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = ["mujoco >= 3.1.6", "dm_control >= 1.0.20", "gymnasium[mujoco]"]
authors = [{ name = "Ancheng Hou", email = "hou.ancheng@sjtu.edu.cn" }]
maintainers = [{ name = "Ancheng Hou", email = "hou.ancheng@sjtu.edu.cn" }]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["description"]

[project.urls]
Homepage = "https://github.com/Pr0ximah/ogbenchTL"
